--- a/app/src/main/res/layout/activity_news_detail.xml
+++ b/app/src/main/res/layout/activity_news_detail.xml
@@ -7,22 +7,23 @@
     android:orientation="vertical"
     tools:context=".NewsDetail">
 
+
     <TextView
         android:id="@+id/textViewJudul"
         style="@style/TextAppearance.AppCompat.Headline"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginHorizontal="50dp"
+        android:layout_marginHorizontal="100dp"
         android:layout_marginTop="16dp"
         android:text="My YC app: Dropbox - Throw away your USB drive"
         android:textAlignment="center"
         app:layout_constraintTop_toTopOf="parent"
-        tools:layout_editor_absoluteX="50dp" />
+        android:layout_marginBottom="12dp" />
 
     <ImageButton
         android:id="@+id/btnStar"
-        android:layout_width="50dp"
-        android:layout_height="50dp"
+        android:layout_width="60dp"
+        android:layout_height="60dp"
         android:layout_alignBaseline="@id/textViewJudul"
         android:layout_alignParentEnd="true"
         android:layout_marginStart="8dp"
@@ -37,6 +38,7 @@
         app:layout_constraintVertical_bias="0.74" />
 
     <ScrollView
+        android:layout_marginTop="12dp"
         android:id="@+id/scrollView2"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -50,6 +52,7 @@
             android:orientation="vertical">
 
             <TextView
+                android:layout_marginVertical="8dp"
                 android:id="@+id/tvAuthor"
                 style="@style/TextAppearance.AppCompat.Headline"
                 android:layout_width="match_parent"
@@ -58,6 +61,7 @@
                 android:textAlignment="center" />
 
             <TextView
+                android:layout_margin="8dp"
                 android:id="@+id/tvTime"
                 style="@style/TextAppearance.AppCompat.Medium"
                 android:layout_width="match_parent"
@@ -66,6 +70,7 @@
                 android:textAlignment="center" />
 
             <TextView
+                android:layout_marginVertical="8dp"
                 style="@style/TextAppearance.AppCompat.Headline"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
@@ -77,6 +82,7 @@
                 android:layout_height="wrap_content" />
 
             <TextView
+                android:layout_marginVertical="12dp"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="Komentar" />
